--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Charity: Water Landing Page</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
+  <div class="container">
+    <!-- Left Section: Logo, Headline, CTA, Description -->
+    <div class="left">
+      <img src="img/charitywater_logo.png" alt="charity: water logo" class="logo" />
+      
+      <h1>Clean Water,<br>Powered By You</h1>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
-
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
+      <div class="water-cta" id="ctaBox">
+        <div class="cta-overlay">
+          <p>No one should have to drink from a muddy river.</p>
+          <p>Every dollar you give goes towards turning struggle into strength – one well at a time.</p>
+          <a href="#" class="donate-btn" id="donateBtn" onclick="showMessage()">Donate</a>
         </div>
-    </section>
+      </div>
 
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
-    </section>
+      <p class="description">
+        You want real change – charity: water shows you the impact of your donation
+        through transparent, life-changing clean water projects and real-time updates.
+        Help provide families with the gift of opportunity.
+      </p>
+    </div>
+
+    <!-- Right Section: Hero Image -->
+    <div class="right">
+      <img src="img/woman.png" alt="Girl with Jerry Can" class="hero-img" />
+    </div>
+  </div>
+
+  <!-- Script to replace CTA on click -->
+  <script>
+    function showMessage() {
+      const ctaBox = document.getElementById("ctaBox");
+      ctaBox.innerHTML = `
+        <div class="cta-overlay">
+          <p style="font-size: 1.2rem; font-weight: bold; color: #1e201c;">Donation page unfinished</p>
+        </div>
+      `;
+    }
+  </script>
 </body>
 </html>
